make everything purple

--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
 <!-- Feel free to change this text here -->
 <p>
   Fork me? Fork you, @octocat!
+  
+  everything is purple now. Thanks to @katrohit!
 </p>
 
 </body>
